Added the /user/avatar endpoint
